--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,10 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<div  *ngIf="splash"  id="custom-overlay" >
+    <div class="flb">
+      <div class="Aligner-item Aligner-item--top"></div>
+      <img src="assets/imgs/logo2.png">
+      <div class="Aligner-item Aligner-item--bottom"></div>
+    </div>
+  </div>
+
+
+  <ion-nav [root]="rootPage"></ion-nav>
