--- a/src/pages/eventos/eventos.scss
+++ b/src/pages/eventos/eventos.scss
@@ -1,5 +1,13 @@
 page-eventos{
 
+  ion-slides{
+    height: auto;
+}
+.card-perfil{
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+}
 #card-perfil-menu {
 
     background-color: #CF8E2C;
@@ -8,7 +16,16 @@ page-eventos{
     width:100%;
 
   }
-
+.card_slide{ 
+    height: 30%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; 
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px; 
+}
   .card-background-page {
 
     background-image: url("../../assets/imgs/bg_marca_dagua.png"); 
@@ -28,19 +45,26 @@ page-eventos{
 
     .photo-menu {
       margin: 0.5em auto;
-      border-radius: 50%;
+      border-radius: 50% ;
       width: 35%;
       height: 35%;
       
-      
+      ion-searchbar{        
+        width: 35%;
+     }
     .avatar {
-      border-radius: 50%;
+      
+      -webkit-border-radius: 40px;
+      -moz-border-radius: 40px;
+      border-radius: 40px;
       width: 100%;
 
     }
     .avatar-grupo {
       border-radius: 50%;
-      width: 40%;
+      width: 15%;
+      top: 45%;
+      left: 60%;
 
     }
   }
@@ -58,9 +82,9 @@ page-eventos{
     background-image: url("../../assets/imgs/bg_toogle.png"); 
   }
 
-    .card-carrosel{
-      width: 45%;
-      height: 45%;
+    .carrosel{
+      width: 100%;
+      height: 50px;
     }
 
   .icon-menu {
@@ -77,12 +101,20 @@ page-eventos{
 }
 
   .title_rodape{
-    
     color :  #fff;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
     text-align: right;
   }
 
+  .bg{
+    background-image: url("../../assets/imgs/bg_marca_dagua.png");        
+    background-color: #CF8E2C;
+    height:100%;
+    width:100%;   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
  
   .bgView2 {
 
@@ -99,5 +131,6 @@ page-eventos{
     overflow: hidden;
 
   }
+
 
 }
