--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,8 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  prime:      #CF8E2C
+  prime:      #CF8E2C,
+  sub:        #f4f4f4
 );
 
 $background-ios-color: #CF8E2C;
