--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -33,6 +33,54 @@ $app-direction: ltr;
 // colors so you can add, rename and remove colors as needed.
 // The "primary" color is the only required color in the map.
 
+
+//alert
+//$alert-md-background-color :#CF8E2C;
+$alert-ios-background-color :#CF8E2C;
+$alert-ios-border-radius : 40px;
+$alert-md-border-radius : 40px;
+$alert-md-button-background-color : #CF8E2C;
+$alert-ios-button-background-color : #CF8E2C;
+$alert-md-button-border-radius : 20px;
+
+.alertLista{
+  
+    .alert-wrapper {
+      background-color: #f4f4f4 !important;
+      border-style: solid !important;
+      border: 2px solid #7d551a !important;
+    }
+    .alert-head{
+      background-color: #CF8E2C !important; 
+      background-image: url("../../assets/imgs/bg_marca_dagua.png") !important;
+    }
+
+    .alert-message{
+      padding: 10px !important;
+    }
+
+    .alert-button{
+      border-style: solid !important;
+      border: 2px solid #7d551a !important;
+      color: #7d551a !important;
+    }
+
+    .alert-input{
+      padding: 10px !important;
+      
+    }
+    .alert-input:focus {
+      margin-bottom: 4px !important;
+      border-bottom: 2px solid #7d551a !important;
+    }
+    
+
+    .alert-title{
+      color: #f4f4f4 !important;
+    }
+}
+
+//
 $colors: (
   primary:    #1161eb,
   secondary:  #32db64,
