laytou modal mapa

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -88,7 +88,8 @@ $colors: (
   light:      #f4f4f4,
   dark:       #222,
   prime:      #CF8E2C,
-  sub:        #f4f4f4
+  sub:        #f4f4f4,
+  terci:      #7d551a
 );
 
 $background-ios-color: #CF8E2C;
