--- a/src/pages/eventos/eventos.scss
+++ b/src/pages/eventos/eventos.scss
@@ -70,6 +70,11 @@ page-eventos{
   border-style: solid;
   border: 2px solid #7d551a;  
 }
+
+.btn-fab-externo{
+  border-style: solid !important;
+  border: 2px solid #7d551a !important; 
+}
 .badge-conteudo{
   right:1px;
   color: #7d551a;
@@ -277,7 +282,9 @@ ion-checkbox{
 
 
 .fab-md-prime {
-  color: #7d551a;
+  color: #7d551a; 
+    border: 2px solid #7d551a !important; 
+  
 }
 
 .label-md {
