--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,5 +1,39 @@
 page-home{
 
+  ///////////////////////////////
+
+  .item-md {
+    padding-left: 10px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+  .list-md .item-block .item-inner {
+    border-bottom: 0px solid #dedede !important;
+  }
+
+  .label-md {
+    margin: 0px 0px 0px 0px;
+  }
+  //////////////////////////////
+
+  .card-background-page {
+
+    background-image: url("../../assets/imgs/bg_marca_dagua.png"); 
+    ion-card {
+      position: relative;
+      text-align: center;
+      background-color:transparentize($color: #CF8E2C, $amount: 0.2)
+      
+    }
+  
+  }
+  .nav-titulo{
+    -moz-box-shadow:   0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+    -webkit-box-shadow:  0 1px 3px 1px rgba(0, 0, 0, 0.5) !important;  
+  }
+
+
 #card-perfil-menu {
 
     background-color: #CF8E2C;
@@ -8,14 +42,73 @@ page-home{
 
   }
 
-  .icon-menu {
-    color :  #CF8E2C;    
+  .card-perfil{
+    height: 30%;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
   }
 
-  .bgView {
-    background-color: #CF8E2C;
-    background-image: url("../../assets/imgs/bg_marca_dagua.png");
+  .photo-menu {
+    margin: 0.5em auto;
+    border-radius: 50% ;
+    width: 35%;
+    height: 35%;
     
   }
+
+  .avatar {
+      
+    -webkit-border-radius: 40px;
+    -moz-border-radius: 40px;
+    border-radius: 40px;
+    width: 100%;
+
+  }
+
+  .avatar-grupo {
+    border-radius: 50%;
+    width: 15%;
+    top: 45%;
+    left: 60%;
+
+  }
+
+  .card-title {
+    font-size: 1.8em;
+    width: 100%;
+    font-weight: inherit;
+    color: #fff;
+  }
+
+  .icon-menu {
+    color :  #CF8E2C;    
+      .fonte-menu{
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;      
+    }
+  }
+
+  .card-subtitle {
+    font-size: 1.0em;
+    top: 52%;
+    width: 100%;
+    color: #fff !important;
+  }
+
+
+  .title_rodape{
+    color :  #fff;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+    text-align: right;
+
+      .icon-menu-premium{
+        color : #f48942; 
+      
+    }
+  }
+  
+
+
+
 
 }
