--- a/src/pages/eventos/eventos.scss
+++ b/src/pages/eventos/eventos.scss
@@ -53,8 +53,26 @@ page-eventos{
     border: #fff;
     text-align: left;
   }
-.card_slide{ 
-    height: 30%;
+  .img_slide{
+    width: 100%;
+    max-width: 1024px;
+    height: 100%;
+    max-height: 200px;
+
+  }
+
+  .card_slide{ 
+    height: 100%;
+    width: 100% !important;
+    max-width: 1024px;
+    margin: 0px 0px 0px 0px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex; 
+}
+.card_slide_geral{ 
+    height: 200px;
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -62,7 +80,8 @@ page-eventos{
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px; 
-    border: 1px solid #7d551a;
+    border: 1.5px solid #fff;
+    
 }
 .btn-fab-evento{
   height: 35px;
@@ -295,6 +314,10 @@ ion-checkbox{
   font-size: 2.4rem;
   font-weight: normal;
   color: #fff;
+}
+.card-md {
+  
+  //: calc(100%);
 }
 
 .card-content-md {
