botao no slide esta quebrando

--- a/src/pages/menu/menu.scss
+++ b/src/pages/menu/menu.scss
@@ -105,7 +105,7 @@ page-menu {
         text-align: right;
     
           .icon-menu-premium{
-            color : #f48942; 
+            color :gold; 
           
         }
       }
