--- a/src/pages/evento-descricao/evento-descricao.scss
+++ b/src/pages/evento-descricao/evento-descricao.scss
@@ -1,9 +1,36 @@
+
 page-evento-descricao {
 ///////////////////////
 .header-md::after{
     bottom: -10px;  
-   
+    
 }
+.scroll-content {
+    padding-left: 10px !important;
+    padding-right: 10px !important;
+    padding-top: 15px !important;
+    padding-bottom: 10px !important;
+ }
+
+ ion-scroll {
+    position: unset !important; 
+   
+ }
+
+ .header-infor{
+     padding: 0px;
+
+ }
+ .scroll {
+    overflow:auto;
+  }
+
+  .swiper-wrapper {
+    height: 95%;
+  }
+ .card-content-md {
+     padding: 0px ;
+ }
 
 ///////
 .img-evento{
@@ -14,6 +41,42 @@ height: 100%;
 max-height: 200px;
 }
 
+.card-infor-titulo{  
+    display: inline-block;
+    width: 80px;
+    margin: 10px;
+    margin-right: 3px;
+    margin-bottom:0px;
+    margin-top:0px;
+    padding:  0px;  
+}
+
+ 
+.card-infor{
+  display: inline-block;
+  width: 230px;
+  max-width: 1000px;
+  margin: 10px;
+  margin-left: 3px;
+  margin-top:0px;
+  margin-bottom:0px;
+  padding:  0px;  
+}
+.background-page {
+
+    background-image: url("../../assets/imgs/bg_marca_dagua.png"); 
+}
+
+
+
+
+
+.card-informaçoes-conteudo{
+    margin: 0px;
+    position: fixed;
+    padding: 0px;
+    margin-right: 100px;
+}
 
 .boton_data{
     margin: 0px;
@@ -45,8 +108,10 @@ max-height: 200px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border-radius: 100px; 
-    background-color:transparentize($color: #7d551a, $amount: 0.1);
+    background-color:transparentize($color: #7d551a, $amount: 0);
 }
+
+
 .card_descricao_evento{
     position: absolute;
     margin: 0px;
@@ -54,7 +119,7 @@ max-height: 200px;
     width: 100%;
     height: 60px;
     top: 196px;
-    background-color:transparentize($color: #7d551a, $amount: 0.1)
+    background-color:transparentize($color: #7d551a, $amount: 0.2)
 }
 
 .endereco_evento{
