--- a/src/pages/modal-map/modal-map.scss
+++ b/src/pages/modal-map/modal-map.scss
@@ -1,20 +1,46 @@
 page-modal-map {
 
 /////////////////////////
-.scroll-content {
-  padding: 0px !important;
+.card-content-md {
+  padding: 0px;
 }
 
-.card-md {
-  margin: 0px; 
-  border-radius: 2px;
-  width: calc(100% - 0px);
-  height: calc(100% - 0px);
-  -webkit-border-radius: 30px;
-  -moz-border-radius: 30px;
-  border-radius:30px;
-  
+.md .modal-wrapper {
+  -webkit-box-shadow: 0 0px 0px rgba(0, 0, 0, 0.4) !important;
+  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.4) !important;
 }
+
+.modalmapa{
+  background-color:transparentize($color: #000, $amount: 0.9 ) !important;
+}
+
+.headermodalmapa{
+  color: #f4f4f4 !important;
+  font-size: 6vw;
+  background-color: #CF8E2C !important; 
+  background-image: url("../../assets/imgs/bg_marca_dagua.png") !important;
+
+}
+.footermoodal{
+position: absolute;
+}
+
+.cardmodalmapa{
+  border: 3px solid #7d551a !important;
+  border-radius: 2px !important;
+  width: calc(100% ) !important;
+  max-width: 250px !important;
+  max-height:350px !important;
+  height: calc(100% - 0px) !important;
+  -webkit-border-radius: 30px !important;
+  -moz-border-radius: 30px !important;
+  border-radius:30px !important;
+  margin: auto !important;
+  margin-top:20% !important;
+
+}
+
+
 .ion-page {
 background-color:rgba(0, 0, 0, 0.6)!important;
 }
@@ -30,45 +56,8 @@ background-color:rgba(0, 0, 0, 0.6)!important;
       height: 55px;
       width:  55px;
       background-color:#CF8E2C;
-      margin-left:21%;
 }
 
-.footermodal{
-    height :65px;
-    width:  298px;
-    //background-image: url("../../assets/imgs/bg_marca_dagua.png") !important;
-    //background-color:#CF8E2C;
-    -webkit-border-bottom-right-radius: 30px;
-    -moz-border-bottom-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    -webkit-border-bottom-left-radius: 30px;
-    -moz-border-bottom-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-}
-
-.cardmodalmapa{
-      background-color: #f4f4f4 !important;
-      border-style: solid !important;
-      border: 2px solid #7d551a !important;
-}
-
-.headermodalmapa{
-    color: #f4f4f4 !important;
-    font-size: 6vw;
-    background-color: #CF8E2C !important; 
-    background-image: url("../../assets/imgs/bg_marca_dagua.png") !important;
-}
-
-.modalmapa{   
-    
-    height: 400px;
-    width :300px;
-    -webkit-border-radius: 30px;
-    -moz-border-radius: 30px;
-    border-radius:30px;
-    margin-left:30px;
-    margin-top :120px
-}
 
 }
 
