--- a/src/pages/evento-descricao/evento-descricao.scss
+++ b/src/pages/evento-descricao/evento-descricao.scss
@@ -2,6 +2,11 @@
 page-evento-descricao {
 ///////////////////////
 
+.toolbar-title-md {
+ padding: 0px; 
+}
+
+
 .fab-md-prime {
     color: #7d551a;
 }
@@ -43,6 +48,11 @@ width: 100%;
 max-width: 1024px;
 height: 100%;
 max-height: 200px;
+border-style: solid;
+border: 2px solid #fff; 
+-moz-box-shadow:   0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+-webkit-box-shadow:  0 1px 3px 1px rgba(0, 0, 0, 0.5) !important;  
 }
 
 .card-infor-titulo{  
@@ -83,10 +93,12 @@ height: auto;
 }
 
 .grid-info{
+    
     background-color:transparentize($color: #7d551a, $amount: 1);
 }
 .colum{
-background-color: #7d551a;
+    background-color: #7d551a6e;
+//background-color: #7d551a;
 }
 
 .rstp-icone-conteudo{
@@ -104,6 +116,7 @@ background-color: #7d551a;
 .btn-fab-conteudo{
     border-style: solid;
     border: 2px solid #7d551a;  
+    
   }
 
 
@@ -122,12 +135,13 @@ background-color: #7d551a;
   }
 
 .fab_compartilha{
-    top: 28px; 
-    right: 65px;   
+    right: 50px;   
+    bottom: 0px;
 }
 
 .fab_map{
-    top: 28px; 
+    right: 0px;   
+    bottom: 0px;
 }
 
 .background-page {
@@ -158,15 +172,19 @@ background-color: #7d551a;
     top:160px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
-    border-radius: 100px; 
+    border-radius: 100px;   
+      
    // background-color:transparentize($color: #7d551a, $amount: 0.1);
 
 }
 .data_evento{
-    top:165px;
+    top:25px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border-radius: 100px; 
+    -moz-box-shadow:   0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+    box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+    -webkit-box-shadow:  0 1px 3px 1px rgba(0, 0, 0, 0.5) !important;  
     //position: absolute;
    // background-color:transparentize($color: #7d551a, $amount: 0.1);
 }
@@ -174,14 +192,18 @@ background-color: #7d551a;
     margin: 0px;
     padding: 0px;
     font-size: 10px;
+    color: #fff;
+    
 }
 
 .bd-data_evento{
+    border-style: solid;
+    border: 2px solid #fff; 
     top:180px;
     -webkit-border-radius: 100px;
     -moz-border-radius: 100px;
     border-radius: 100px; 
-    background-color:transparentize($color: #7d551a, $amount: 0);
+    background-color:transparentize($color: #CF8E2C, $amount: 0);
 }
 
 
@@ -192,7 +214,9 @@ background-color: #7d551a;
     width: 100%;
     height: 60px;
     top: 196px;
-    background-color:transparentize($color: #7d551a, $amount: 0.2)
+    background-color: #7d551acc;
+    //background-color: #cf8e2cb5;
+    //background-color:transparentize($color: #7d551a, $amount: 0.2)
 }
 
 .endereco_evento{
