--- a/src/pages/eventos/eventos.scss
+++ b/src/pages/eventos/eventos.scss
@@ -161,7 +161,8 @@ ion-checkbox{
 
 .fab-evento-data{
   position: absolute ;
-  background-color:transparentize($color: #f7f7f7, $amount: 0.9);
+  background-color: #7d551aa3;
+  //background-color:transparentize($color: #f7f7f7, $amount: 0.9);
   height: 100%;
   line-height: 16px;
   padding-left: 0px;
