dados dinamicos em vento descricao

--- a/src/pages/evento-descricao/evento-descricao.scss
+++ b/src/pages/evento-descricao/evento-descricao.scss
@@ -198,6 +198,8 @@ height: auto;
 }
 
 .bd-data_evento{
+    width: 70px;
+    height: 70px;
     border-style: solid;
     border: 2px solid #fff; 
     top:180px;
