refazendo modal lista amiga

--- a/src/pages/calendario-modal/calendario-modal.scss
+++ b/src/pages/calendario-modal/calendario-modal.scss
@@ -137,9 +137,9 @@ page-calendario-modal {
         margin-top: 225px;
         margin-left: 34px;
         }
-
+        
         .titulomodal{
-            color: #f4f4f4 !important;
+          color: #ffffff !important;
             font-size: 25px;
         }
       
