--- a/src/pages/modal-map/modal-map.scss
+++ b/src/pages/modal-map/modal-map.scss
@@ -77,7 +77,7 @@ page-modal-map {
             margin-left: 34px;
       }
       .titulomodal{
-        color: #f4f4f4 !important;
+        color: #ffffff !important;
         font-size: 25px;
       }
 
