--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,7 +82,7 @@ $alert-md-button-border-radius : 20px;
 
 //
 $colors: (
-  primary:    #1161eb,
+  primary:    #7d551a,
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
