--- a/src/pages/nome-lista-modal/nome-lista-modal.scss
+++ b/src/pages/nome-lista-modal/nome-lista-modal.scss
@@ -10,6 +10,13 @@ page-nome-lista-modal {
     padding: 1px 1px;
   }
   
+
+  .item-md.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner,
+.item-md.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner {
+  border-bottom-color: #7d551a;
+  -webkit-box-shadow: inset 0 -1px 0 0 #7d551a;
+  box-shadow: inset 0 -1px 0 0 #7d551a;
+}
   
   ////////////////////////////////////////////
 
