--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -83,7 +83,7 @@ $alert-md-button-border-radius : 20px;
 //
 $colors: (
   primary:    #7d551a,
-  secondary:  #32db64,
+  secondary:  #CF8E2C,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
