--- a/src/pages/eventos/eventos.scss
+++ b/src/pages/eventos/eventos.scss
@@ -10,6 +10,10 @@ page-eventos{
 ///////////////////////////////////////////////////
 
 
+.alert-md .alert-head {
+
+}
+
 ///////////////////////////////////////////////////
 
 .card-itens{
