--- a/src/pages/nome-lista-modal/nome-lista-modal.scss
+++ b/src/pages/nome-lista-modal/nome-lista-modal.scss
@@ -9,7 +9,12 @@ page-nome-lista-modal {
   .card-content-md {
     padding: 1px 1px;
   }
-  
+
+
+  .item-wp.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .text-input,
+.item-wp.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .text-input {
+  border-color: #7d551a;
+}
 
   .item-md.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner,
 .item-md.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner {
@@ -17,6 +22,22 @@ page-nome-lista-modal {
   -webkit-box-shadow: inset 0 -1px 0 0 #7d551a;
   box-shadow: inset 0 -1px 0 0 #7d551a;
 }
+
+
+.item-md.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner,
+.item-md.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner {
+  border-bottom-color: #7d551a;
+  -webkit-box-shadow: inset 0 -1px 0 0 #7d551a;
+  box-shadow: inset 0 -1px 0 0 #7d551a;
+}
+
+.list-md .item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus):last-child,
+.list-md .item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus):last-child {
+  border-bottom-color: #7d551a;
+  -webkit-box-shadow: inset 0 -1px 0 0 #7d551a;
+  box-shadow: inset 0 -1px 0 0 #7d551a;
+}
+
   
   ////////////////////////////////////////////
 
