--- a/src/pages/cadastro-evento/cadastro-evento.scss
+++ b/src/pages/cadastro-evento/cadastro-evento.scss
@@ -1,5 +1,9 @@
 page-cadastro-evento {
 
+    /////////////////////////////////
+
+
+    ///////////////////////////////////
 
 
 
@@ -11,6 +15,11 @@ page-cadastro-evento {
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+
+    .item-label-stacked .text-input-md, .item-label-floating .text-input-md {
+        color:#7d551a; 
     }
 
     .card-cadastro{
