--- a/src/pages/cadastro-eventopt2/cadastro-eventopt2.scss
+++ b/src/pages/cadastro-eventopt2/cadastro-eventopt2.scss
@@ -1,3 +1,19 @@
 page-cadastro-eventopt2 {
 
+    .background-page {
+
+        background-image: url("../../assets/imgs/bg_marca_dagua.png"); 
+        height:100%;
+        width:100%;   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .card-cadastro{
+        padding-top: 0px;
+        background-color:transparentize($color: #7d551a, $amount: 0.8);
+        height: 530px;
+    }
+
 }
