--- a/src/pages/cadastro-eventopt2/cadastro-eventopt2.scss
+++ b/src/pages/cadastro-eventopt2/cadastro-eventopt2.scss
@@ -12,8 +12,21 @@ page-cadastro-eventopt2 {
 
     .card-cadastro{
         padding-top: 0px;
-        background-color:transparentize($color: #7d551a, $amount: 0.8);
+        background-color:transparentize($color: #e5dcd1, $amount: 0.0);
         height: 530px;
     }
+
+    .btns{
+        width: 100%;
+        height: 120px;
+
+    }
+
+    .icons{
+        font-size: 50px;
+        color: #e5dcd1;
+    }
+
+
 
 }
