--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -89,7 +89,8 @@ $colors: (
   dark:       #222,
   prime:      #CF8E2C,
   sub:        #f4f4f4,
-  terci:      #7d551a
+  terci:      #7d551a,
+  produtor:   #284bca
 );
 
 $background-ios-color: #CF8E2C;
