--- a/src/pages/confirma-cadastro/confirma-cadastro.scss
+++ b/src/pages/confirma-cadastro/confirma-cadastro.scss
@@ -1,3 +1,91 @@
 page-confirma-cadastro {
 
+
+    .img-evento{
+        position: fixed;
+        width: 100%;
+        max-width: 1024px;
+        height: 100%;
+        max-height: 200px;
+        border-style: solid;
+        border: 2px solid #fff; 
+        -moz-box-shadow:   0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+        box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.5)!important;
+        -webkit-box-shadow:  0 1px 3px 1px rgba(0, 0, 0, 0.5) !important;  
+        }
+
+        .background-page {
+
+            background-image: url("../../assets/imgs/bg_marca_dagua.png"); 
+            height:100%;
+            width:100%;   
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .scroll-content {
+            padding-left: 10px !important;
+            padding-right: 10px !important;
+            padding-top: 15px !important;
+            padding-bottom: 10px !important;
+         }
+        
+         ion-scroll {
+            position: unset !important; 
+           
+         }
+
+         .header_cadastro{
+            
+                height: 250px;
+               
+         }
+
+  .btn-fab-confirma{
+
+    border-style: solid;
+    border: 2px solid #7d551a;  
+  }
+
+  .rstp-icone-conteudo{
+    font-size: 26px;
+    color: #7d551a;
+  }
+
+  .rstp-icone{
+    font-size: 50px;
+    color: #7d551a;
+  
+  }
+
+  .grid-info{
+    
+    background-color:transparentize($color: #7d551a, $amount: 1);
+}
+
+.titulo-header{
+    color: #7d551a;
+    margin: 1px;
+    padding: 3px;
+}
+.colum{
+    background-color: #f7f7f7e0;
+    border: 1px solid #7d551a4a;
+//background-color: #7d551a;
+}
+.linha{
+    height: auto;
+    }
+
+    .texto-infor{
+        color: #7d551a;
+        margin: 1px;
+        padding: 3px;
+    }
+
+    .ultima_linha{
+        height: 50px;
+    }
+
 }
