lautou login pronto

--- a/src/pages/nome-lista-modal/nome-lista-modal.scss
+++ b/src/pages/nome-lista-modal/nome-lista-modal.scss
@@ -38,6 +38,9 @@ page-nome-lista-modal {
   box-shadow: inset 0 -1px 0 0 #7d551a;
 }
 
+.item-label-stacked .text-input-md, .item-label-floating .text-input-md {
+  color:#7d551a; 
+}
   
   ////////////////////////////////////////////
 
