--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,9 +1,7 @@
 page-login {
 
 ///////////////////////
-.card-md {
-     margin: 0px !important; 
-}
+
 
 .card-content-md {
     padding: 5px 10px;
@@ -16,7 +14,71 @@ page-login {
   -webkit-box-shadow: inset 0 -1px 0 0 #7d551a;
   box-shadow: inset 0 -1px 0 0 #7d551a;
 }
+
+.item-label-stacked .text-input-md, .item-label-floating .text-input-md {
+    color:#7d551a; 
+}
+
+.item.item-md .checkbox-md {
+    position: static;
+    display: block;
+    margin: 3px;
+  }
+
+  .item-md {
+    padding-left: 0px;
+    color: #7d551a;
+    background-color: #e6d7c4;
+   
+  }
+
+  .checkbox-md .checkbox-icon {
+
+    border-color: #7d551a;
+    background-color:#e6d7c4;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px; 
+
+  }
+
+  .checkbox-md .checkbox-checked .checkbox-inner {
+
+    border-color: #fff;
+  }
+
+
+  .checkbox-md .checkbox-checked {
+    border-color: #7d551a;
+    background-color: #7d551a;
+}
+
+
 /////////////////////////
+
+.btnLgn{
+width: 200px !important;
+
+margin-left:calc(50% - 100px);
+
+
+}
+.btnfort{
+    text-align: center;
+    color: #7d551a;
+    //margin: 0 !important;
+    right: 0;
+    background-color: transparent;
+
+}
+.btncad{
+    text-align: center;
+    color: #7d551a;
+    //margin: 0 !important;
+    right: 0;
+    background-color: transparent;
+
+}
 
     .background-page {
 
@@ -34,26 +96,70 @@ page-login {
     }
     .cardlogologin{
         margin-top: 0px;
-        background-color:transparentize($color: #CF8E2C, $amount: 0.6);
-        height: 320px;
-        width: 100%
+        background-color:transparentize($color: #CF8E2C, $amount: 1);
+        //height: 100%;
+        //width: 100%
 
+    }
+    .btnSocialLng{
+        width: 10px;
+        height: 50px;
+        margin-left:calc(50% - 30px);
+
+    }
+    .ggl{
+        background-color: #bf3c35;
+    }
+    .fbk{
+        background-color: #29487d;
+    }
+
+    .lblOU{
+        //width: 150px;
+        //margin-left:calc(50% - 75px);
+        text-align: center;
+        color: #7d551a;
+        margin: 0 !important;
+        
+    }
+    .lbl{
+        text-align: right;
+    }
+
+    .lblcadse{
+                //width: 150px;
+        //margin-left:calc(50% - 75px);
+        text-align: center;
+        color: #7d551a;
+        margin: 0 !important;
+        left: 0;
+        
     }
     .loginsenha{
         padding-left: 0px !important;
         background-color:transparentize($color: #7d551a, $amount: 1);
         border-bottom:1px solid #7d551a !important;
     }
+    .lblLembrar{
+        font-size: 1.6rem !important;
+        margin: 0;
+    }
+
+    
+        
+        .item-md .item-cover .itemLembrar {
+            padding-left: 0px;
+              height: 2px ;
+          }
+   
 
 
     .imglogo{
-    width: 150px;
-    margin-left:calc(50% - 75px);
+    width: 120px;
+    margin-left:calc(50% - 60px);
     }
 
-    .no-scroll .scroll-content{
-        overflow: hidden;
-      }
+
     
    
 
