--- a/src/pages/cad-perfil/cad-perfil.scss
+++ b/src/pages/cad-perfil/cad-perfil.scss
@@ -1,5 +1,38 @@
 page-cad-perfil {
 
+
+        /////////////////////////////////
+
+
+        .item-md.item-input.ng-valid.item-input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner,
+        .item-md.item-input.ng-valid.input-has-value:not(.input-has-focus):not(.item-input-has-focus) .item-inner {
+          border-bottom-color: #7d551a;
+          -webkit-box-shadow: inset 0 -1px 0 0 #7d551a;
+          box-shadow: inset 0 -1px 0 0 #7d551a;
+        }
+        
+        .item-label-stacked .text-input-md,
+        .item-label-floating .text-input-md {
+            color: #7d551a;
+            }
+
+        .label-md {
+             margin: 0 0 0 0; 
+          }
+
+          .select-md .select-icon .select-icon-inner {
+          
+            color: #7d551a;
+        }
+
+        .select-text {
+            color: #7d551a;
+        }
+
+        
+            ///////////////////////////////////
+
+
     .background-page {
 
         background-image: url("../../assets/imgs/bg_marca_dagua.png"); 
@@ -8,6 +41,18 @@ page-cad-perfil {
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .card-cadastro{
+        padding-top: 0px;
+        background-color:transparentize($color: #7d551a, $amount: 0.8);
+        height: 530px;
+    }
+
+    .item-imput-card{
+        padding-left: 0px !important;
+        background-color:transparentize($color: #7d551a, $amount: 1);
+        border-bottom:1px solid #7d551a !important;
     }
 
 }
